# remote-engine-blocker

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  reb_main.c  reb_main.h
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml
Unity/src/: unity.h
docs/architecture/: can_messages.md  can_organization.md  raw_requirements.md  reb_can_database.dbc  software_architecture.md
docs/decisions/: adr-001-project-structure.md
src/: CMakeLists.txt
src/can/: CMakeLists.txt  can_codec.c  can_codec.h  can_defs.h  can_frame.c  can_frame.h  can_ids.c  can_ids.h  can_monitor.c  can_monitor.h  can_rx.c  can_rx.h  can_socket_transport.c  can_socket_transport.h  can_tx.c  can_tx.h  placeholder.c
src/reb_core/: CMakeLists.txt  actuator_iface.c  actuator_iface.h  alert_manager.c  alert_manager.h  event_log.c  event_log.h  fsm.c  fsm.h  nvm.c  nvm.h  panel_auth.c  panel_auth.h  placeholder.c  placeholder.h  reb_can_adapter.c  reb_can_adapter.h  reb_config.h  reb_core.c  reb_core.h  reb_logger.c  reb_logger.h  reb_persistence.c  reb_persistence.h  reb_rules.c  reb_rules.h  reb_security.c  reb_security.h  reb_state_machine.c  reb_state_machine.h  reb_types.h  reversal_window.c  reversal_window.h  security_manager.c  security_manager.h  sensor_fusion.c  sensor_fusion.h  starter_control.c  starter_control.h
src/reb_core/include/: reb_config.h
tests/: CMakeLists.txt  test_reb.c  test_reb_all.c
tools/: requirements_audit.py  requirements_audit_v2.py
(+25 files in other folders)
